screenshot image removed

--- a/Project_Data_Modelling_with_Apache_Cassandra.ipynb
+++ b/Project_Data_Modelling_with_Apache_Cassandra.ipynb
@@ -288,11 +288,7 @@
     "- location of the user\n",
     "- sessionId\n",
     "- song title\n",
-    "- userId\n",
-    "\n",
-    "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
-    "\n",
-    "![image_event_datafile_new](https://github.com/user-attachments/assets/1ac283ce-e2f5-42b7-aa75-bb8d988fee74)"
+    "- userId"
    ]
   },
   {
