screenshot of consolidated data file added

--- a/Project_Data_Modelling_with_Apache_Cassandra.ipynb
+++ b/Project_Data_Modelling_with_Apache_Cassandra.ipynb
@@ -288,7 +288,11 @@
     "- location of the user\n",
     "- sessionId\n",
     "- song title\n",
-    "- userId"
+    "- userId\n",
+    "\n",
+    "The image below is a screenshot of what the denormalized data appears like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
+    "\n",
+    "![image](https://github.com/user-attachments/assets/5a2cd3d4-b1d1-4052-837b-8e7ade421e31)"
    ]
   },
   {
